--- a/CinemaBook/Scence/SplachScreen/view/SplachScreenViewController.xib
+++ b/CinemaBook/Scence/SplachScreen/view/SplachScreenViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,19 +18,22 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MY APP BOOKING CINEMA " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XIU-Yj-HfO">
-                    <rect key="frame" x="38.5" y="433" width="337.5" height="30"/>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
-                    <color key="textColor" red="0.96470588239999999" green="0.69019607839999997" blue="0.1529411765" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGO-APP" translatesAutoresizingMaskIntoConstraints="NO" id="UYH-bD-FEE">
+                    <rect key="frame" x="0.0" y="-6" width="414" height="918"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.12941176470588234" green="0.14117647058823529" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="XIU-Yj-HfO" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Pg1-VB-n8I"/>
-                <constraint firstItem="XIU-Yj-HfO" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="oV0-8B-K3y"/>
+                <constraint firstItem="UYH-bD-FEE" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="-50" id="723-TC-LM5"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="UYH-bD-FEE" secondAttribute="trailing" id="k9f-MR-baA"/>
+                <constraint firstItem="UYH-bD-FEE" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="qEU-hi-X8s"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="UYH-bD-FEE" secondAttribute="bottom" constant="-50" id="znm-0T-WWI"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="132" y="84"/>
         </view>
     </objects>
+    <resources>
+        <image name="LOGO-APP" width="1010" height="554"/>
+    </resources>
 </document>
