--- a/CinemaBook/Scence/Booking/DetailMovie/view/DetailMovieViewController.xib
+++ b/CinemaBook/Scence/Booking/DetailMovie/view/DetailMovieViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailMovieViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="bannerVoucher" destination="rJS-4L-bEw" id="zI6-ZN-W86"/>
                 <outlet property="btn_readmore" destination="bFc-SW-K0q" id="4dI-oC-bQy"/>
                 <outlet property="image_poster" destination="T23-uV-gF6" id="Pne-yb-Tvd"/>
                 <outlet property="lbl_author" destination="M2V-KD-2YL" id="RjJ-bi-Tib"/>
@@ -574,6 +575,32 @@
                                                         <constraint firstItem="wW8-IO-gs3" firstAttribute="top" secondItem="raz-av-kwT" secondAttribute="top" id="xbS-9K-ffq"/>
                                                     </constraints>
                                                 </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vQ3-wo-DOr">
+                                                    <rect key="frame" x="0.0" y="700" width="414" height="200"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Voucher" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZwA-sD-VuQ">
+                                                            <rect key="frame" x="10" y="0.0" width="404" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rJS-4L-bEw" customClass="FSPagerView" customModule="FSPagerView">
+                                                            <rect key="frame" x="0.0" y="20.5" width="414" height="179.5"/>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                        </view>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="rJS-4L-bEw" firstAttribute="top" secondItem="ZwA-sD-VuQ" secondAttribute="bottom" id="8VK-74-zx9"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ZwA-sD-VuQ" secondAttribute="trailing" id="Fsz-D4-UaE"/>
+                                                        <constraint firstItem="rJS-4L-bEw" firstAttribute="leading" secondItem="vQ3-wo-DOr" secondAttribute="leading" id="VxB-cJ-nDZ"/>
+                                                        <constraint firstAttribute="height" constant="200" id="bzI-Ny-7IW"/>
+                                                        <constraint firstAttribute="bottom" secondItem="rJS-4L-bEw" secondAttribute="bottom" id="gIW-Ob-nc2"/>
+                                                        <constraint firstAttribute="trailing" secondItem="rJS-4L-bEw" secondAttribute="trailing" id="nJm-Hj-w3U"/>
+                                                        <constraint firstItem="ZwA-sD-VuQ" firstAttribute="leading" secondItem="vQ3-wo-DOr" secondAttribute="leading" constant="10" id="q7p-mg-ZLY"/>
+                                                        <constraint firstItem="ZwA-sD-VuQ" firstAttribute="top" secondItem="vQ3-wo-DOr" secondAttribute="top" id="zD2-eT-JsO"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
@@ -581,8 +608,11 @@
                                                 <constraint firstItem="Tiw-Rp-Zxv" firstAttribute="top" secondItem="RXi-u7-cjr" secondAttribute="top" id="5Ij-jJ-dEo"/>
                                                 <constraint firstAttribute="height" constant="800" id="8zq-TQ-Met"/>
                                                 <constraint firstItem="raz-av-kwT" firstAttribute="top" secondItem="Tiw-Rp-Zxv" secondAttribute="bottom" id="Axt-YC-ow4"/>
+                                                <constraint firstItem="vQ3-wo-DOr" firstAttribute="top" secondItem="raz-av-kwT" secondAttribute="bottom" id="PXg-vg-Bzw"/>
                                                 <constraint firstAttribute="trailing" secondItem="Tiw-Rp-Zxv" secondAttribute="trailing" id="YI7-kb-kZV"/>
                                                 <constraint firstAttribute="trailing" secondItem="raz-av-kwT" secondAttribute="trailing" id="dnH-ck-8Ue"/>
+                                                <constraint firstItem="vQ3-wo-DOr" firstAttribute="leading" secondItem="RXi-u7-cjr" secondAttribute="leading" id="mTE-8B-dhH"/>
+                                                <constraint firstAttribute="trailing" secondItem="vQ3-wo-DOr" secondAttribute="trailing" id="soY-ui-5fU"/>
                                                 <constraint firstItem="raz-av-kwT" firstAttribute="leading" secondItem="RXi-u7-cjr" secondAttribute="leading" id="yIn-9S-nrf"/>
                                             </constraints>
                                         </view>
