--- a/CinemaBook/Scence/Home/view/HomeViewController.xib
+++ b/CinemaBook/Scence/Home/view/HomeViewController.xib
@@ -27,26 +27,26 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vVx-X6-bnx">
-                            <rect key="frame" x="0.0" y="40" width="414" height="778"/>
+                            <rect key="frame" x="0.0" y="20" width="414" height="798"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         </tableView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cFw-QF-IUD">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="20"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="D0c-y0-15X">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="20"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rGd-xQ-ujb">
-                                            <rect key="frame" x="0.0" y="0.0" width="206.5" height="40"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="206.5" height="20"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PHIM DANG CHIEU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jt4-rL-Nmu">
-                                                    <rect key="frame" x="29.5" y="10" width="147.5" height="20.5"/>
+                                                    <rect key="frame" x="29.5" y="0.0" width="147.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jHk-5h-T3L">
-                                                    <rect key="frame" x="0.0" y="0.0" width="206.5" height="40"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="206.5" height="20"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <state key="normal" title="Button"/>
@@ -66,16 +66,16 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OBJ-zA-lP4">
-                                            <rect key="frame" x="207.5" y="0.0" width="206.5" height="40"/>
+                                            <rect key="frame" x="207.5" y="0.0" width="206.5" height="20"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PHIM SAP CHIEU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lfz-sa-RWN">
-                                                    <rect key="frame" x="37" y="10" width="132.5" height="20.5"/>
+                                                    <rect key="frame" x="37" y="0.0" width="132.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wyk-fs-4LX">
-                                                    <rect key="frame" x="0.0" y="0.0" width="206.5" height="40"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="206.5" height="20"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <state key="normal" title="Button"/>
@@ -97,14 +97,22 @@
                                     </subviews>
                                 </stackView>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="D0c-y0-15X" secondAttribute="trailing" id="JV7-wP-z3X"/>
-                                <constraint firstItem="D0c-y0-15X" firstAttribute="top" secondItem="cFw-QF-IUD" secondAttribute="top" id="SgX-ff-fiu"/>
-                                <constraint firstItem="D0c-y0-15X" firstAttribute="leading" secondItem="cFw-QF-IUD" secondAttribute="leading" id="U5N-n4-Q6P"/>
-                                <constraint firstAttribute="height" constant="40" id="bN9-Tl-cyb"/>
-                                <constraint firstAttribute="bottom" secondItem="D0c-y0-15X" secondAttribute="bottom" id="jNS-X8-Dea"/>
+                                <constraint firstItem="D0c-y0-15X" firstAttribute="leading" secondItem="cFw-QF-IUD" secondAttribute="leading" id="NRi-hQ-Y3L"/>
+                                <constraint firstAttribute="bottom" secondItem="D0c-y0-15X" secondAttribute="bottom" id="RTV-wX-tTV"/>
+                                <constraint firstItem="D0c-y0-15X" firstAttribute="top" secondItem="cFw-QF-IUD" secondAttribute="top" id="THO-8X-eCA"/>
+                                <constraint firstAttribute="height" constant="20" id="bN9-Tl-cyb"/>
+                                <constraint firstAttribute="trailing" secondItem="D0c-y0-15X" secondAttribute="trailing" id="nBz-cd-b6h"/>
                             </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                    <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
