--- a/CinemaBook/Scence/Home/view/cell/ItemCollectioncell/FlimsCollectionViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/ItemCollectioncell/FlimsCollectionViewCell.xib
@@ -33,48 +33,50 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yph-TG-Wgy">
-                                <rect key="frame" x="200" y="280" width="100" height="20"/>
-                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="hKD-rA-SrJ"/>
-                                    <constraint firstAttribute="width" constant="100" id="r19-lg-EnB"/>
-                                </constraints>
-                                <state key="normal" title="DAT VE">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="10"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                        <real key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                        <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Yph-TG-Wgy" secondAttribute="trailing" id="1xE-7U-L2X"/>
                             <constraint firstItem="oad-O2-WsO" firstAttribute="leading" secondItem="XQa-Ff-GdQ" secondAttribute="leading" id="3jv-oy-WJ8"/>
                             <constraint firstItem="oad-O2-WsO" firstAttribute="top" secondItem="XQa-Ff-GdQ" secondAttribute="top" id="6x9-hn-vAM"/>
                             <constraint firstAttribute="trailing" secondItem="09i-53-omh" secondAttribute="trailing" id="A6w-rL-cav"/>
                             <constraint firstItem="09i-53-omh" firstAttribute="top" secondItem="oad-O2-WsO" secondAttribute="bottom" id="BQX-cn-l3B"/>
                             <constraint firstAttribute="bottom" secondItem="09i-53-omh" secondAttribute="bottom" id="Qvp-cS-MCn"/>
                             <constraint firstAttribute="trailing" secondItem="oad-O2-WsO" secondAttribute="trailing" id="Zrw-Ot-H6x"/>
-                            <constraint firstAttribute="bottom" secondItem="Yph-TG-Wgy" secondAttribute="bottom" id="kBo-Bv-lrJ"/>
                             <constraint firstItem="09i-53-omh" firstAttribute="leading" secondItem="XQa-Ff-GdQ" secondAttribute="leading" id="lqH-YT-L8c"/>
                         </constraints>
                     </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yph-TG-Wgy">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <state key="normal" title="DAT VE">
+                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                        <connections>
+                            <action selector="btn_makeToDetailViewController:" destination="gTV-IL-0wX" eventType="touchUpInside" id="7Bg-tB-eDe"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="XQa-Ff-GdQ" secondAttribute="bottom" id="5yD-QF-3UL"/>
+                <constraint firstAttribute="bottom" secondItem="Yph-TG-Wgy" secondAttribute="bottom" id="GGi-dE-YWh"/>
                 <constraint firstItem="XQa-Ff-GdQ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="JSA-8c-hr3"/>
+                <constraint firstAttribute="trailing" secondItem="Yph-TG-Wgy" secondAttribute="trailing" id="NA0-6X-cus"/>
+                <constraint firstItem="Yph-TG-Wgy" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ald-se-gPT"/>
                 <constraint firstItem="XQa-Ff-GdQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="rUA-Ab-ywt"/>
+                <constraint firstItem="Yph-TG-Wgy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="tFJ-DS-AmG"/>
                 <constraint firstAttribute="trailing" secondItem="XQa-Ff-GdQ" secondAttribute="trailing" id="vEs-aL-ehQ"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
