--- a/CinemaBook/Scence/Login/view/LoginViewController.xib
+++ b/CinemaBook/Scence/Login/view/LoginViewController.xib
@@ -24,7 +24,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KNh-xc-pcT">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tech-logo_cl_#1" translatesAutoresizingMaskIntoConstraints="NO" id="D2o-dT-ome">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGO-APP" translatesAutoresizingMaskIntoConstraints="NO" id="D2o-dT-ome">
                             <rect key="frame" x="107" y="100" width="200" height="80"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="200" id="TT9-v8-bU6"/>
@@ -153,8 +153,8 @@
         </view>
     </objects>
     <resources>
+        <image name="LOGO-APP" width="1010" height="554"/>
         <image name="icon-login" width="24" height="24"/>
-        <image name="tech-logo_cl_#1" width="222.5" height="50"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
