--- a/CinemaBook/Scence/Home/view/cell/BannerTraillerVideoTableViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/BannerTraillerVideoTableViewCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yV3-gS-OsT">
                         <rect key="frame" x="0.0" y="40" width="300" height="260"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="jaZ-GA-cK5">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="jaZ-GA-cK5">
                                 <rect key="frame" x="0.0" y="0.0" width="300" height="260"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hSk-U4-Gu7">
