--- a/CinemaBook/Scence/Home/view/cell/BannerMovieTableViewCell.xib
+++ b/CinemaBook/Scence/Home/view/cell/BannerMovieTableViewCell.xib
@@ -18,10 +18,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="es5-gs-gvf">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="280"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="upM-Fv-ApC">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="upM-Fv-ApC">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="280"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="owh-Sw-m48">
                                     <size key="itemSize" width="128" height="128"/>
@@ -33,18 +33,52 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="upM-Fv-ApC" firstAttribute="top" secondItem="es5-gs-gvf" secondAttribute="top" id="EBd-rb-xEj"/>
-                            <constraint firstAttribute="trailing" secondItem="upM-Fv-ApC" secondAttribute="trailing" id="dMg-V1-DN7"/>
-                            <constraint firstAttribute="bottom" secondItem="upM-Fv-ApC" secondAttribute="bottom" id="gET-LY-nih"/>
-                            <constraint firstItem="upM-Fv-ApC" firstAttribute="leading" secondItem="es5-gs-gvf" secondAttribute="leading" id="uLG-f5-SWM"/>
+                            <constraint firstItem="upM-Fv-ApC" firstAttribute="top" secondItem="es5-gs-gvf" secondAttribute="top" id="E4K-0T-Oia"/>
+                            <constraint firstAttribute="trailing" secondItem="upM-Fv-ApC" secondAttribute="trailing" id="rY0-rS-YRq"/>
+                            <constraint firstItem="upM-Fv-ApC" firstAttribute="leading" secondItem="es5-gs-gvf" secondAttribute="leading" id="wQA-pE-CzG"/>
+                            <constraint firstAttribute="bottom" secondItem="upM-Fv-ApC" secondAttribute="bottom" id="znZ-5s-LZO"/>
                         </constraints>
                     </view>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Qo6-7c-VPV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="20"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HAi-YZ-YJ7">
+                                <rect key="frame" x="0.0" y="0.0" width="106" height="20"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <state key="normal" title="Phim dang chieu">
+                                    <color key="titleColor" red="0.90980392160000001" green="0.0" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqZ-FX-BVF">
+                                <rect key="frame" x="107" y="0.0" width="106" height="20"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Phim sap chieu">
+                                    <color key="titleColor" red="0.90980392160000001" green="0.0" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yi9-Ko-Kvk">
+                                <rect key="frame" x="214" y="0.0" width="106" height="20"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Cua hang">
+                                    <color key="titleColor" red="0.90980392160000001" green="0.0" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="fNL-Ld-me7"/>
+                        </constraints>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="es5-gs-gvf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9i4-6g-Dhs"/>
-                    <constraint firstItem="es5-gs-gvf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="CzL-Jf-Ud9"/>
-                    <constraint firstAttribute="trailing" secondItem="es5-gs-gvf" secondAttribute="trailing" id="QGW-du-b1b"/>
-                    <constraint firstAttribute="bottom" secondItem="es5-gs-gvf" secondAttribute="bottom" id="T86-j0-76f"/>
+                    <constraint firstItem="Qo6-7c-VPV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="2ob-JF-cqV"/>
+                    <constraint firstItem="es5-gs-gvf" firstAttribute="top" secondItem="Qo6-7c-VPV" secondAttribute="bottom" id="5kb-gF-aPb"/>
+                    <constraint firstAttribute="trailing" secondItem="Qo6-7c-VPV" secondAttribute="trailing" id="Ngi-y8-5UV"/>
+                    <constraint firstAttribute="trailing" secondItem="es5-gs-gvf" secondAttribute="trailing" id="ZJm-X2-r37"/>
+                    <constraint firstItem="es5-gs-gvf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="dBh-y1-VQc"/>
+                    <constraint firstAttribute="bottom" secondItem="es5-gs-gvf" secondAttribute="bottom" id="wPC-66-8J0"/>
+                    <constraint firstItem="Qo6-7c-VPV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="yMz-VP-JOv"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
