--- a/CinemaBook/Scence/Booking/TimeShow/view/cell/cellitem/celltime/itemTimeCollectionViewCell.xib
+++ b/CinemaBook/Scence/Booking/TimeShow/view/cell/cellitem/celltime/itemTimeCollectionViewCell.xib
@@ -28,6 +28,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <state key="normal" title="Button"/>
+                        <connections>
+                            <action selector="btn_makeToChairBookingViewController:" destination="gTV-IL-0wX" eventType="touchUpInside" id="7j8-Am-HGu"/>
+                        </connections>
                     </button>
                 </subviews>
             </view>
@@ -49,7 +52,6 @@
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
             <connections>
-                <outlet property="btn_makeToBookingChairViewController" destination="XPM-ih-XgV" id="gye-Ur-mZI"/>
                 <outlet property="lbl_time" destination="eyD-Jn-4yF" id="rKL-Nr-K92"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="88.392857142857139"/>
